# limitedBuffer

./: .gitignore  CMakeLists.txt  README.md
include/: LimitedBuffer.h
tests/: baseTest.cpp
